Implement unban events and API and also add it to the Recent stored events, as well some cleanups

--- a/internal/locales/de.json
+++ b/internal/locales/de.json
@@ -110,6 +110,8 @@
     "settings.destination_email_placeholder": "alerts@swissmakers.ch",
     "settings.alert_countries": "Alarm-Länder",
     "settings.alert_countries_description": "Wählen Sie die Länder aus, für die E-Mail-Alarme ausgelöst werden sollen, wenn eine Sperrung erfolgt.",
+    "settings.email_alerts_for_bans": "E-Mail-Benachrichtigungen für Sperrungen aktivieren",
+    "settings.email_alerts_for_unbans": "E-Mail-Benachrichtigungen für Entsperrungen aktivieren",
     "settings.smtp": "SMTP-Konfiguration",
     "settings.smtp_host": "SMTP-Host",
     "settings.smtp_host_placeholder": "z.B. smtp.gmail.com",
@@ -281,6 +283,15 @@
     "email.whois.no_data": "WHOIS-Daten wurden für dieses Ereignis nicht erfasst.",
     "email.logs.no_data": "Für diesen Block wurden keine Log-Einträge erfasst.",
     "email.footer.text": "Diese Nachricht wurde automatisch von Fail2Ban-UI generiert",
+    "email.unban.title": "IP-Adresse entsperrt",
+    "email.unban.intro": "IP-Adresse aus Fail2Ban-Jail entsperrt.",
+    "email.unban.subject.unbanned": "Entsperrt",
+    "email.unban.subject.from": "von",
+    "email.unban.details.unbanned_ip": "Entsperrte IP",
+    "email.unban.details.jail": "Jail",
+    "email.unban.details.hostname": "Hostname",
+    "email.unban.details.country": "Land",
+    "email.unban.details.timestamp": "Zeitstempel",
     "lotr.email.title": "Ein dunkler Diener wurde verbannt",
     "lotr.email.intro": "Die Wächter von Mittelerde haben eine Bedrohung erkannt und aus dem Reich verbannt.",
     "lotr.email.you_shall_not_pass": "DU KANNST NICHT VORBEI",
@@ -289,8 +300,15 @@
     "lotr.email.details.realm_protection": "Das Reich des Schutzes",
     "lotr.email.details.origins": "Herkunft aus den",
     "lotr.email.details.banished_at": "Verbannt zur",
+    "lotr.email.unban.title": "Der festgehaltene wird wider freigelassen",
+    "lotr.email.unban.intro": "Die Wächter von Mittelerde haben den Zugang wiederhergestellt.",
+    "lotr.email.unban.details.restored_ip": "Wiederhergestellte IP",
     "lotr.banished": "Aus dem Reich verbannt",
     "lotr.realms_protected": "Geschützte Reiche",
-    "lotr.threats_banished": "Verbannte Bedrohungen"
+    "lotr.threats_banished": "Verbannte Bedrohungen",
+    "toast.ban.title": "Neue Blockierung aufgetreten",
+    "toast.ban.action": "gesperrt in",
+    "toast.unban.title": "IP entsperrt",
+    "toast.unban.action": "entsperrt von"
   }
   
