--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -110,6 +110,8 @@
     "settings.destination_email_placeholder": "alerts@swissmakers.ch",
     "settings.alert_countries": "Alarm-Länder",
     "settings.alert_countries_description": "Wähl d'Länder us, für weli du per Email ä Alarm becho wetsch, wenn e Sperrig erfolgt.",
+    "settings.email_alerts_for_bans": "Email-Benachrichtigunge für Sperrige aktiviere",
+    "settings.email_alerts_for_unbans": "Email-Benachrichtigunge für Entsperrige aktiviere",
     "settings.smtp": "SMTP-Konfiguration",
     "settings.smtp_host": "SMTP-Host",
     "settings.smtp_host_placeholder": "z.B. smtp.gmail.com",
@@ -281,6 +283,15 @@
     "email.whois.no_data": "WHOIS-Date si für das Ereignis nid erfasst worde.",
     "email.logs.no_data": "Für de Block sind keni Log-Iiträg erfasst worde.",
     "email.footer.text": "Diä Nachricht isch automatisch vom Fail2Ban-UI generiert worde",
+    "email.unban.title": "IP-Adrässä entsperrt",
+    "email.unban.intro": "E IP-Adrässä isch usem Fail2Ban-Jail entsperrt worde.",
+    "email.unban.subject.unbanned": "Entsperrt",
+    "email.unban.subject.from": "vo",
+    "email.unban.details.unbanned_ip": "Entsperrti IP",
+    "email.unban.details.jail": "Jail",
+    "email.unban.details.hostname": "Hostname",
+    "email.unban.details.country": "Land",
+    "email.unban.details.timestamp": "Ziitstämpfel",
     "lotr.email.title": "E dunkle Diener isch verbannt worde",
     "lotr.email.intro": "D Wächter vo Mittelerde hei e Bedrohig erkannt und us dim Riich verbannt.",
     "lotr.email.you_shall_not_pass": "DU DARFSCH NID VERBII",
@@ -289,8 +300,15 @@
     "lotr.email.details.realm_protection": "S Riich vom Schutz",
     "lotr.email.details.origins": "Herkunft us de",
     "lotr.email.details.banished_at": "Verbannt zur",
+    "lotr.email.unban.title": "Dr festghautnig wird wider freiglah",
+    "lotr.email.unban.intro": "D Wächter vo Mittelerde hei dr Zugang wiederhergstellt.",
+    "lotr.email.unban.details.restored_ip": "Widerhergstellti IP",
     "lotr.banished": "Us em Riich verbannt",
     "lotr.realms_protected": "Gschützti Riich",
-    "lotr.threats_banished": "Verbannti Bedrohige"
+    "lotr.threats_banished": "Verbannti Bedrohige",
+    "toast.ban.title": "Neui Blockierig ufträte",
+    "toast.ban.action": "gsperrt i",
+    "toast.unban.title": "IP entsperrt",
+    "toast.unban.action": "entsperrt vo"
   }
   
