--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -110,6 +110,8 @@
     "settings.destination_email_placeholder": "alerts@swissmakers.ch",
     "settings.alert_countries": "Alert Countries",
     "settings.alert_countries_description": "Choose the countries for which you want to receive email alerts when a block is triggered.",
+    "settings.email_alerts_for_bans": "Enable email alerts for bans",
+    "settings.email_alerts_for_unbans": "Enable email alerts for unbans",
     "settings.smtp": "SMTP Configuration",
     "settings.smtp_host": "SMTP Host",
     "settings.smtp_host_placeholder": "e.g., smtp.gmail.com",
@@ -281,6 +283,15 @@
     "email.whois.no_data": "WHOIS data was not captured for this event.",
     "email.logs.no_data": "No log entries were captured for this block.",
     "email.footer.text": "This message was generated automatically by Fail2Ban-UI",
+    "email.unban.title": "IP Address Unbanned",
+    "email.unban.intro": "An IP address has been unbanned from a Fail2Ban jail.",
+    "email.unban.subject.unbanned": "Unbanned",
+    "email.unban.subject.from": "from",
+    "email.unban.details.unbanned_ip": "Unbanned IP",
+    "email.unban.details.jail": "Jail",
+    "email.unban.details.hostname": "Hostname",
+    "email.unban.details.country": "Country",
+    "email.unban.details.timestamp": "Timestamp",
     "lotr.email.title": "A Dark Servant Has Been Banished",
     "lotr.email.intro": "The guardians of Middle-earth have detected a threat and banished it from the realm.",
     "lotr.email.you_shall_not_pass": "YOU SHALL NOT PASS",
@@ -289,8 +300,15 @@
     "lotr.email.details.realm_protection": "The Realm of Protection",
     "lotr.email.details.origins": "Origins from the",
     "lotr.email.details.banished_at": "Banished at the",
+    "lotr.email.unban.title": "The held prisoner has been released",
+    "lotr.email.unban.intro": "The guardians of Middle-earth have restored access to the realm.",
+    "lotr.email.unban.details.restored_ip": "Restored IP",
     "lotr.banished": "Banished from the realm",
     "lotr.realms_protected": "Realms Protected",
-    "lotr.threats_banished": "Threats Banished"
+    "lotr.threats_banished": "Threats Banished",
+    "toast.ban.title": "New block occurred",
+    "toast.ban.action": "banned in",
+    "toast.unban.title": "IP unblocked",
+    "toast.unban.action": "unblocked from"
   }
   
