--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -110,6 +110,8 @@
   "settings.destination_email_placeholder": "alerts@swissmakers.ch",
   "settings.alert_countries": "Países para alerta",
   "settings.alert_countries_description": "Elige los países para los que deseas recibir alertas por correo electrónico cuando se produzca un bloqueo.",
+  "settings.email_alerts_for_bans": "Activar alertas por email para bloqueos",
+  "settings.email_alerts_for_unbans": "Activar alertas por email para desbloqueos",
   "settings.smtp": "Configuración SMTP",
   "settings.smtp_host": "Host SMTP",
   "settings.smtp_host_placeholder": "p.ej., smtp.gmail.com",
@@ -281,6 +283,15 @@
     "email.whois.no_data": "No se capturaron datos WHOIS para este evento.",
     "email.logs.no_data": "No se capturaron entradas de registro para este bloqueo.",
     "email.footer.text": "Este mensaje fue generado automáticamente por Fail2Ban-UI",
+    "email.unban.title": "Dirección IP desbloqueada",
+    "email.unban.intro": "Una dirección IP ha sido desbloqueada de una prisión Fail2Ban.",
+    "email.unban.subject.unbanned": "Desbloqueado",
+    "email.unban.subject.from": "de",
+    "email.unban.details.unbanned_ip": "IP desbloqueada",
+    "email.unban.details.jail": "Prisión",
+    "email.unban.details.hostname": "Nombre de host",
+    "email.unban.details.country": "País",
+    "email.unban.details.timestamp": "Marca de tiempo",
     "lotr.email.title": "Un siervo oscuro ha sido desterrado",
     "lotr.email.intro": "Los guardianes de la Tierra Media han detectado una amenaza y la han desterrado del reino.",
     "lotr.email.you_shall_not_pass": "NO PASARÁS",
@@ -289,7 +300,14 @@
     "lotr.email.details.realm_protection": "El reino de la protección",
     "lotr.email.details.origins": "Orígenes de las",
     "lotr.email.details.banished_at": "Desterrado a las",
+    "lotr.email.unban.title": "El prisionero detenido ha sido liberado",
+    "lotr.email.unban.intro": "Los guardianes de la Tierra Media han restaurado el acceso al reino.",
+    "lotr.email.unban.details.restored_ip": "IP restaurada",
     "lotr.banished": "Desterrado del reino",
     "lotr.realms_protected": "Reinos protegidos",
-    "lotr.threats_banished": "Amenazas desterradas"
+    "lotr.threats_banished": "Amenazas desterradas",
+    "toast.ban.title": "Nuevo bloqueo ocurrido",
+    "toast.ban.action": "bloqueado en",
+    "toast.unban.title": "IP desbloqueada",
+    "toast.unban.action": "desbloqueada de"
   }
