--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -110,6 +110,8 @@
   "settings.destination_email_placeholder": "alerts@swissmakers.ch",
   "settings.alert_countries": "Pays d'alerte",
   "settings.alert_countries_description": "Choisissez les pays pour lesquels vous souhaitez recevoir des alertes par email lors d'un blocage.",
+  "settings.email_alerts_for_bans": "Activer les alertes email pour les bannissements",
+  "settings.email_alerts_for_unbans": "Activer les alertes email pour les débannissements",
   "settings.smtp": "Configuration SMTP",
   "settings.smtp_host": "Hôte SMTP",
   "settings.smtp_host_placeholder": "par exemple, smtp.gmail.com",
@@ -281,6 +283,15 @@
   "email.whois.no_data": "Les données WHOIS n'ont pas été capturées pour cet événement.",
   "email.logs.no_data": "Aucune entrée de journal n'a été capturée pour ce blocage.",
   "email.footer.text": "Ce message a été généré automatiquement par Fail2Ban-UI",
+  "email.unban.title": "Adresse IP débannie",
+  "email.unban.intro": "Une adresse IP a été débannie d'une prison Fail2Ban.",
+  "email.unban.subject.unbanned": "Débanni",
+  "email.unban.subject.from": "de",
+  "email.unban.details.unbanned_ip": "IP débannie",
+  "email.unban.details.jail": "Prison",
+  "email.unban.details.hostname": "Nom d'hôte",
+  "email.unban.details.country": "Pays",
+  "email.unban.details.timestamp": "Horodatage",
   "lotr.email.title": "Un serviteur des ténèbres a été banni",
   "lotr.email.intro": "Les gardiens de la Terre du Milieu ont détecté une menace et l'ont bannie du royaume.",
   "lotr.email.you_shall_not_pass": "TU NE PASSERAS PAS",
@@ -289,7 +300,14 @@
   "lotr.email.details.realm_protection": "Le royaume de la protection",
   "lotr.email.details.origins": "Origines des",
   "lotr.email.details.banished_at": "Banni à",
+  "lotr.email.unban.title": "Le détenu a été libéré",
+  "lotr.email.unban.intro": "Les gardiens de la Terre du Milieu ont restauré l'accès au royaume.",
+  "lotr.email.unban.details.restored_ip": "IP restaurée",
   "lotr.banished": "Banni du royaume",
   "lotr.realms_protected": "Royaumes protégés",
-  "lotr.threats_banished": "Menaces bannies"
+  "lotr.threats_banished": "Menaces bannies",
+  "toast.ban.title": "Nouveau blocage survenu",
+  "toast.ban.action": "banni dans",
+  "toast.unban.title": "IP débloquée",
+  "toast.unban.action": "débloquée de"
 }
