--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -110,6 +110,8 @@
   "settings.destination_email_placeholder": "alerts@swissmakers.ch",
   "settings.alert_countries": "Paesi per allarme",
   "settings.alert_countries_description": "Seleziona i paesi per i quali desideri ricevere allarmi via email quando si verifica un blocco.",
+  "settings.email_alerts_for_bans": "Abilita allarmi email per i ban",
+  "settings.email_alerts_for_unbans": "Abilita allarmi email per gli unban",
   "settings.smtp": "Configurazione SMTP",
   "settings.smtp_host": "Host SMTP",
   "settings.smtp_host_placeholder": "es. smtp.gmail.com",
@@ -281,6 +283,15 @@
   "email.whois.no_data": "I dati WHOIS non sono stati acquisiti per questo evento.",
   "email.logs.no_data": "Nessuna voce di log è stata acquisita per questo blocco.",
   "email.footer.text": "Questo messaggio è stato generato automaticamente da Fail2Ban-UI",
+  "email.unban.title": "Indirizzo IP sbannato",
+  "email.unban.intro": "Un indirizzo IP è stato sbannato da una prigione Fail2Ban.",
+  "email.unban.subject.unbanned": "Sbannato",
+  "email.unban.subject.from": "da",
+  "email.unban.details.unbanned_ip": "IP sbannato",
+  "email.unban.details.jail": "Prigione",
+  "email.unban.details.hostname": "Nome host",
+  "email.unban.details.country": "Paese",
+  "email.unban.details.timestamp": "Timestamp",
   "lotr.email.title": "Un servitore oscuro è stato bandito",
   "lotr.email.intro": "I guardiani della Terra di Mezzo hanno rilevato una minaccia e l'hanno bandita dal regno.",
   "lotr.email.you_shall_not_pass": "NON PASSERAI",
@@ -289,7 +300,14 @@
   "lotr.email.details.realm_protection": "Il regno della protezione",
   "lotr.email.details.origins": "Origini dalle",
   "lotr.email.details.banished_at": "Bandito alle",
+  "lotr.email.unban.title": "Il detenuto è stato rilasciato",
+  "lotr.email.unban.intro": "I guardiani della Terra di Mezzo hanno ripristinato l'accesso al regno.",
+  "lotr.email.unban.details.restored_ip": "IP ripristinato",
   "lotr.banished": "Bandito dal regno",
   "lotr.realms_protected": "Regni protetti",
-  "lotr.threats_banished": "Minacce bandite"
+  "lotr.threats_banished": "Minacce bandite",
+  "toast.ban.title": "Nuovo blocco verificato",
+  "toast.ban.action": "bannato in",
+  "toast.unban.title": "IP sbloccato",
+  "toast.unban.action": "sbloccato da"
 }
