Fix ssh connector and rewrite the get jail function, to get all in only one ssh-connection, instead of one for every jail (speed-up), add missing translations

--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -112,6 +112,7 @@
   "settings.destination_email_placeholder": "alerts@swissmakers.ch",
   "settings.alert_countries": "Pays d'alerte",
   "settings.alert_countries_description": "Choisissez les pays pour lesquels vous souhaitez recevoir des alertes par email lors d'un blocage.",
+  "settings.email_alerts": "Préférences d'alertes email",
   "settings.email_alerts_for_bans": "Activer les alertes email pour les bannissements",
   "settings.email_alerts_for_unbans": "Activer les alertes email pour les débannissements",
   "settings.smtp": "Configuration SMTP",
@@ -198,6 +199,23 @@
   "settings.save": "Enregistrer",
   "modal.filter_config": "Configuration du filtre / Jail:",
   "modal.filter_config_edit": "Modifier le filtre / Jail",
+  "modal.filter_config_label": "Configuration du filtre",
+  "modal.filter_config_hint": "Si laissé vide, un fichier de filtre vide sera créé.",
+  "modal.filter_name": "Nom du filtre",
+  "modal.filter_name_hint": "Seuls les caractères alphanumériques, les tirets et les underscores sont autorisés.",
+  "modal.jail_config": "Configuration du jail",
+  "modal.jail_config_hint": "La configuration du jail sera automatiquement remplie lorsque vous sélectionnez un filtre.",
+  "modal.jail_config_label": "Configuration du jail",
+  "modal.jail_filter": "Filtre (optionnel)",
+  "modal.jail_filter_hint": "La sélection d'un filtre remplira automatiquement la configuration du jail.",
+  "modal.jail_name": "Nom du jail",
+  "modal.jail_name_hint": "Seuls les caractères alphanumériques, les tirets et les underscores sont autorisés.",
+  "modal.test_logpath": "Tester le chemin de journal",
+  "modal.create": "Créer",
+  "modal.create_filter": "Créer un nouveau filtre",
+  "modal.create_filter_title": "Créer un nouveau filtre",
+  "modal.create_jail": "Créer un nouveau jail",
+  "modal.create_jail_title": "Créer un nouveau jail",
   "modal.cancel": "Annuler",
   "modal.save": "Enregistrer",
   "modal.close": "Fermer",
@@ -229,9 +247,10 @@
   "servers.form.hostname": "Nom d'hôte du serveur",
   "servers.form.hostname_placeholder": "optionnel",
   "servers.form.ssh_user": "Utilisateur SSH",
-  "servers.form.ssh_user_placeholder": "root",
+  "servers.form.ssh_user_placeholder": "sa_fail2ban",
   "servers.form.ssh_key": "Chemin de la clé SSH",
-  "servers.form.ssh_key_placeholder": "~/.ssh/id_rsa",
+  "servers.form.ssh_key_placeholder": "/config/.ssh/id_rsa",
+  "servers.form.ssh_key_help": "Placez votre clé privée SSH dans le répertoire /config/.ssh/ (volume de configuration monté). Le fichier de clé doit avoir les permissions 600 (chmod 600). Exemple : /config/.ssh/id_rsa",
   "servers.form.agent_url": "URL de l'agent",
   "servers.form.agent_url_placeholder": "https://host:9443",
   "servers.form.agent_secret": "Secret de l'agent",
