--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -112,6 +112,7 @@
   "settings.destination_email_placeholder": "alerts@swissmakers.ch",
   "settings.alert_countries": "Paesi per allarme",
   "settings.alert_countries_description": "Seleziona i paesi per i quali desideri ricevere allarmi via email quando si verifica un blocco.",
+  "settings.email_alerts": "Preferenze allarmi email",
   "settings.email_alerts_for_bans": "Abilita allarmi email per i ban",
   "settings.email_alerts_for_unbans": "Abilita allarmi email per gli unban",
   "settings.smtp": "Configurazione SMTP",
@@ -198,6 +199,23 @@
   "settings.save": "Salva",
   "modal.filter_config": "Configurazione del filtro / Jail:",
   "modal.filter_config_edit": "Modifica filtro / Jail",
+  "modal.filter_config_label": "Configurazione del filtro",
+  "modal.filter_config_hint": "Se lasciato vuoto, verrà creato un file di filtro vuoto.",
+  "modal.filter_name": "Nome del filtro",
+  "modal.filter_name_hint": "Sono consentiti solo caratteri alfanumerici, trattini e underscore.",
+  "modal.jail_config": "Configurazione del jail",
+  "modal.jail_config_hint": "La configurazione del jail verrà compilata automaticamente quando si seleziona un filtro.",
+  "modal.jail_config_label": "Configurazione del jail",
+  "modal.jail_filter": "Filtro (opzionale)",
+  "modal.jail_filter_hint": "La selezione di un filtro compila automaticamente la configurazione del jail.",
+  "modal.jail_name": "Nome del jail",
+  "modal.jail_name_hint": "Sono consentiti solo caratteri alfanumerici, trattini e underscore.",
+  "modal.test_logpath": "Testa il percorso del log",
+  "modal.create": "Crea",
+  "modal.create_filter": "Crea nuovo filtro",
+  "modal.create_filter_title": "Crea nuovo filtro",
+  "modal.create_jail": "Crea nuovo jail",
+  "modal.create_jail_title": "Crea nuovo jail",
   "modal.cancel": "Annulla",
   "modal.save": "Salva",
   "modal.close": "Chiudi",
@@ -229,9 +247,10 @@
   "servers.form.hostname": "Nome host del server",
   "servers.form.hostname_placeholder": "opzionale",
   "servers.form.ssh_user": "Utente SSH",
-  "servers.form.ssh_user_placeholder": "root",
+  "servers.form.ssh_user_placeholder": "sa_fail2ban",
   "servers.form.ssh_key": "Percorso della chiave SSH",
-  "servers.form.ssh_key_placeholder": "~/.ssh/id_rsa",
+  "servers.form.ssh_key_placeholder": "/config/.ssh/id_rsa",
+  "servers.form.ssh_key_help": "Posiziona la tua chiave privata SSH nella directory /config/.ssh/ (volume di configurazione montato). Il file della chiave deve avere i permessi 600 (chmod 600). Esempio: /config/.ssh/id_rsa",
   "servers.form.agent_url": "URL dell'agente",
   "servers.form.agent_url_placeholder": "https://host:9443",
   "servers.form.agent_secret": "Segreto dell'agente",
