--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -112,6 +112,7 @@
     "settings.destination_email_placeholder": "alerts@swissmakers.ch",
     "settings.alert_countries": "Alert Countries",
     "settings.alert_countries_description": "Choose the countries for which you want to receive email alerts when a block is triggered.",
+    "settings.email_alerts": "Email Alert Preferences",
     "settings.email_alerts_for_bans": "Enable email alerts for bans",
     "settings.email_alerts_for_unbans": "Enable email alerts for unbans",
     "settings.smtp": "SMTP Configuration",
@@ -198,6 +199,23 @@
     "settings.save": "Save",
     "modal.filter_config": "Filter / Jail Configuration:",
     "modal.filter_config_edit": "Edit Filter / Jail",
+    "modal.filter_config_label": "Filter Configuration",
+    "modal.filter_config_hint": "If left empty, an empty filter file will be created.",
+    "modal.filter_name": "Filter Name",
+    "modal.filter_name_hint": "Only alphanumeric characters, dashes, and underscores are allowed.",
+    "modal.jail_config": "Jail Configuration",
+    "modal.jail_config_hint": "Jail configuration will be auto-populated when you select a filter.",
+    "modal.jail_config_label": "Jail Configuration",
+    "modal.jail_filter": "Filter (optional)",
+    "modal.jail_filter_hint": "Selecting a filter will auto-populate the jail configuration.",
+    "modal.jail_name": "Jail Name",
+    "modal.jail_name_hint": "Only alphanumeric characters, dashes, and underscores are allowed.",
+    "modal.test_logpath": "Test Logpath",
+    "modal.create": "Create",
+    "modal.create_filter": "Create New Filter",
+    "modal.create_filter_title": "Create New Filter",
+    "modal.create_jail": "Create New Jail",
+    "modal.create_jail_title": "Create New Jail",
     "modal.cancel": "Cancel",
     "modal.save": "Save",
     "modal.close": "Close",
@@ -229,9 +247,10 @@
     "servers.form.hostname": "Server Hostname",
     "servers.form.hostname_placeholder": "optional",
     "servers.form.ssh_user": "SSH User",
-    "servers.form.ssh_user_placeholder": "root",
+    "servers.form.ssh_user_placeholder": "sa_fail2ban",
     "servers.form.ssh_key": "SSH Private Key Path",
-    "servers.form.ssh_key_placeholder": "~/.ssh/id_rsa",
+    "servers.form.ssh_key_placeholder": "/config/.ssh/id_rsa",
+    "servers.form.ssh_key_help": "Place your SSH private key in the /config/.ssh/ directory (mounted config volume). The key file must have permissions 600 (chmod 600). Example: /config/.ssh/id_rsa",
     "servers.form.agent_url": "Agent URL",
     "servers.form.agent_url_placeholder": "https://host:9443",
     "servers.form.agent_secret": "Agent Secret",
