--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -112,6 +112,7 @@
   "settings.destination_email_placeholder": "alerts@swissmakers.ch",
   "settings.alert_countries": "Países para alerta",
   "settings.alert_countries_description": "Elige los países para los que deseas recibir alertas por correo electrónico cuando se produzca un bloqueo.",
+  "settings.email_alerts": "Preferencias de alertas por email",
   "settings.email_alerts_for_bans": "Activar alertas por email para bloqueos",
   "settings.email_alerts_for_unbans": "Activar alertas por email para desbloqueos",
   "settings.smtp": "Configuración SMTP",
@@ -198,6 +199,23 @@
   "settings.save": "Guardar",
   "modal.filter_config": "Configuración del filtro / Jail:",
   "modal.filter_config_edit": "Editar filtro / Jail",
+  "modal.filter_config_label": "Configuración del filtro",
+  "modal.filter_config_hint": "Si se deja vacío, se creará un archivo de filtro vacío.",
+  "modal.filter_name": "Nombre del filtro",
+  "modal.filter_name_hint": "Solo se permiten caracteres alfanuméricos, guiones y guiones bajos.",
+  "modal.jail_config": "Configuración del jail",
+  "modal.jail_config_hint": "La configuración del jail se completará automáticamente cuando seleccione un filtro.",
+  "modal.jail_config_label": "Configuración del jail",
+  "modal.jail_filter": "Filtro (opcional)",
+  "modal.jail_filter_hint": "La selección de un filtro completará automáticamente la configuración del jail.",
+  "modal.jail_name": "Nombre del jail",
+  "modal.jail_name_hint": "Solo se permiten caracteres alfanuméricos, guiones y guiones bajos.",
+  "modal.test_logpath": "Probar ruta de registro",
+  "modal.create": "Crear",
+  "modal.create_filter": "Crear nuevo filtro",
+  "modal.create_filter_title": "Crear nuevo filtro",
+  "modal.create_jail": "Crear nuevo jail",
+  "modal.create_jail_title": "Crear nuevo jail",
   "modal.cancel": "Cancelar",
   "modal.save": "Guardar",
   "modal.close": "Cerrar",
@@ -229,9 +247,10 @@
   "servers.form.hostname": "Nombre de host del servidor",
   "servers.form.hostname_placeholder": "opcional",
   "servers.form.ssh_user": "Usuario SSH",
-  "servers.form.ssh_user_placeholder": "root",
+  "servers.form.ssh_user_placeholder": "sa_fail2ban",
   "servers.form.ssh_key": "Ruta de la clave SSH",
-  "servers.form.ssh_key_placeholder": "~/.ssh/id_rsa",
+  "servers.form.ssh_key_placeholder": "/config/.ssh/id_rsa",
+  "servers.form.ssh_key_help": "Coloque su clave privada SSH en el directorio /config/.ssh/ (volumen de configuración montado). El archivo de clave debe tener permisos 600 (chmod 600). Ejemplo: /config/.ssh/id_rsa",
   "servers.form.agent_url": "URL del agente",
   "servers.form.agent_url_placeholder": "https://host:9443",
   "servers.form.agent_secret": "Secreto del agente",
