Added manual block section and BanIP method to for all connectors, like the UnbanIP functionallity

--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -38,6 +38,20 @@
     "dashboard.table.log_line": "Log-Zile",
     "dashboard.no_banned_ips": "Ke g'sperrti IPs",
     "dashboard.unban": "Entsperre",
+    "dashboard.manual_block.title": "Manuelli IP-Sperri",
+    "dashboard.manual_block.subtitle": "Manuell e IP-Adrässe inme bestimmte Jail sperre.",
+    "dashboard.manual_block.expand_hint": "Klick zum Ufklappe und e IP-Adrässe z sperre",
+    "dashboard.manual_block.jail_label": "Jail uswähle",
+    "dashboard.manual_block.jail_placeholder": "Jail uswähle...",
+    "dashboard.manual_block.ip_label": "IP-Adrässe",
+    "dashboard.manual_block.ip_placeholder": "z.B. 88.76.21.123",
+    "dashboard.manual_block.button": "IP sperre",
+    "dashboard.manual_block.confirm": "IP {ip} im Jail {jail} sperre?",
+    "dashboard.manual_block.success": "IP erfolgriich g'sperrt",
+    "dashboard.manual_block.error": "Fehler bim Sperre vo dr IP",
+    "dashboard.manual_block.jail_required": "Bitte wähl es Jail us",
+    "dashboard.manual_block.ip_required": "Bitte gib e IP-Adrässe ii",
+    "dashboard.manual_block.invalid_ip": "Bitte gib e gültigi IP-Adrässe ii",
     "dashboard.banned.show_more": "Meh azeige",
     "dashboard.banned.show_less": "Weniger azeige",
     "logs.overview.title": "Generelli Log-Übersicht",
