--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -38,6 +38,20 @@
     "dashboard.table.log_line": "Log Line",
     "dashboard.no_banned_ips": "No banned IPs",
     "dashboard.unban": "Unban",
+    "dashboard.manual_block.title": "Manual Block IP",
+    "dashboard.manual_block.subtitle": "Manually block an IP address in a specific jail.",
+    "dashboard.manual_block.expand_hint": "Click to expand and block an IP address",
+    "dashboard.manual_block.jail_label": "Select Jail",
+    "dashboard.manual_block.jail_placeholder": "Choose a jail...",
+    "dashboard.manual_block.ip_label": "IP Address",
+    "dashboard.manual_block.ip_placeholder": "e.g., 88.76.21.123",
+    "dashboard.manual_block.button": "Block IP",
+    "dashboard.manual_block.confirm": "Block IP {ip} in jail {jail}?",
+    "dashboard.manual_block.success": "IP blocked successfully",
+    "dashboard.manual_block.error": "Error blocking IP",
+    "dashboard.manual_block.jail_required": "Please select a jail",
+    "dashboard.manual_block.ip_required": "Please enter an IP address",
+    "dashboard.manual_block.invalid_ip": "Please enter a valid IP address",
     "dashboard.banned.show_more": "Show more",
     "dashboard.banned.show_less": "Hide extra",
     "logs.overview.title": "Internal Log Overview",
