--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -38,6 +38,20 @@
   "dashboard.table.log_line": "Línea de log",
   "dashboard.no_banned_ips": "No hay IP bloqueadas",
   "dashboard.unban": "Desbloquear",
+  "dashboard.manual_block.title": "Bloqueo manual de IP",
+  "dashboard.manual_block.subtitle": "Bloquear manualmente una dirección IP en una cárcel específica.",
+  "dashboard.manual_block.expand_hint": "Haga clic para expandir y bloquear una dirección IP",
+  "dashboard.manual_block.jail_label": "Seleccionar cárcel",
+  "dashboard.manual_block.jail_placeholder": "Elegir una cárcel...",
+  "dashboard.manual_block.ip_label": "Dirección IP",
+  "dashboard.manual_block.ip_placeholder": "ej. 88.76.21.123",
+  "dashboard.manual_block.button": "Bloquear IP",
+  "dashboard.manual_block.confirm": "¿Bloquear IP {ip} en la cárcel {jail}?",
+  "dashboard.manual_block.success": "IP bloqueada exitosamente",
+  "dashboard.manual_block.error": "Error al bloquear la IP",
+  "dashboard.manual_block.jail_required": "Por favor seleccione una cárcel",
+  "dashboard.manual_block.ip_required": "Por favor ingrese una dirección IP",
+  "dashboard.manual_block.invalid_ip": "Por favor ingrese una dirección IP válida",
   "dashboard.banned.show_more": "Mostrar más",
   "dashboard.banned.show_less": "Mostrar menos",
   "logs.overview.title": "Resumen interno de registros",
