--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -38,6 +38,20 @@
   "dashboard.table.log_line": "Ligne de log",
   "dashboard.no_banned_ips": "Aucune IP bloquée",
   "dashboard.unban": "Débloquer",
+  "dashboard.manual_block.title": "Blocage manuel d'IP",
+  "dashboard.manual_block.subtitle": "Bloquer manuellement une adresse IP dans une prison spécifique.",
+  "dashboard.manual_block.expand_hint": "Cliquez pour développer et bloquer une adresse IP",
+  "dashboard.manual_block.jail_label": "Sélectionner une prison",
+  "dashboard.manual_block.jail_placeholder": "Choisir une prison...",
+  "dashboard.manual_block.ip_label": "Adresse IP",
+  "dashboard.manual_block.ip_placeholder": "ex. 88.76.21.123",
+  "dashboard.manual_block.button": "Bloquer l'IP",
+  "dashboard.manual_block.confirm": "Bloquer l'IP {ip} dans la prison {jail}?",
+  "dashboard.manual_block.success": "IP bloquée avec succès",
+  "dashboard.manual_block.error": "Erreur lors du blocage de l'IP",
+  "dashboard.manual_block.jail_required": "Veuillez sélectionner une prison",
+  "dashboard.manual_block.ip_required": "Veuillez entrer une adresse IP",
+  "dashboard.manual_block.invalid_ip": "Veuillez entrer une adresse IP valide",
   "dashboard.banned.show_more": "Afficher plus",
   "dashboard.banned.show_less": "Afficher moins",
   "logs.overview.title": "Vue d'ensemble interne des journaux",
