--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -38,6 +38,20 @@
   "dashboard.table.log_line": "Riga di log",
   "dashboard.no_banned_ips": "Nessuna IP bloccata",
   "dashboard.unban": "Sblocca",
+  "dashboard.manual_block.title": "Blocco manuale IP",
+  "dashboard.manual_block.subtitle": "Bloccare manualmente un indirizzo IP in una prigione specifica.",
+  "dashboard.manual_block.expand_hint": "Fare clic per espandere e bloccare un indirizzo IP",
+  "dashboard.manual_block.jail_label": "Seleziona prigione",
+  "dashboard.manual_block.jail_placeholder": "Scegli una prigione...",
+  "dashboard.manual_block.ip_label": "Indirizzo IP",
+  "dashboard.manual_block.ip_placeholder": "es. 88.76.21.123",
+  "dashboard.manual_block.button": "Blocca IP",
+  "dashboard.manual_block.confirm": "Bloccare IP {ip} nella prigione {jail}?",
+  "dashboard.manual_block.success": "IP bloccato con successo",
+  "dashboard.manual_block.error": "Errore nel bloccare l'IP",
+  "dashboard.manual_block.jail_required": "Si prega di selezionare una prigione",
+  "dashboard.manual_block.ip_required": "Si prega di inserire un indirizzo IP",
+  "dashboard.manual_block.invalid_ip": "Si prega di inserire un indirizzo IP valido",
   "dashboard.banned.show_more": "Mostra di più",
   "dashboard.banned.show_less": "Mostra meno",
   "logs.overview.title": "Panoramica interna dei log",
