--- a/internal/locales/de.json
+++ b/internal/locales/de.json
@@ -38,6 +38,20 @@
     "dashboard.table.log_line": "Logzeile",
     "dashboard.no_banned_ips": "Keine gesperrten IPs",
     "dashboard.unban": "Entsperren",
+    "dashboard.manual_block.title": "Manuelle IP-Sperre",
+    "dashboard.manual_block.subtitle": "Manuell eine IP-Adresse in einem bestimmten Jail sperren.",
+    "dashboard.manual_block.expand_hint": "Klicken Sie, um zu erweitern und eine IP-Adresse zu sperren",
+    "dashboard.manual_block.jail_label": "Jail auswählen",
+    "dashboard.manual_block.jail_placeholder": "Jail auswählen...",
+    "dashboard.manual_block.ip_label": "IP-Adresse",
+    "dashboard.manual_block.ip_placeholder": "z.B. 88.76.21.123",
+    "dashboard.manual_block.button": "IP sperren",
+    "dashboard.manual_block.confirm": "IP {ip} im Jail {jail} sperren?",
+    "dashboard.manual_block.success": "IP erfolgreich gesperrt",
+    "dashboard.manual_block.error": "Fehler beim Sperren der IP",
+    "dashboard.manual_block.jail_required": "Bitte wählen Sie ein Jail aus",
+    "dashboard.manual_block.ip_required": "Bitte geben Sie eine IP-Adresse ein",
+    "dashboard.manual_block.invalid_ip": "Bitte geben Sie eine gültige IP-Adresse ein",
     "dashboard.banned.show_more": "Mehr anzeigen",
     "dashboard.banned.show_less": "Weniger anzeigen",
     "logs.overview.title": "Interne Log-Übersicht",
